<resources>
    <string name="app_name">Master</string>
    <string name="ask_pi_placeholder">What\'s pi?</string>
    <string name="operations_label"># of operations:</string>
    <string name="in_progress">In Progress</string>
    <string name="calculating_pi">calculating Pi</string>

    <string name="execution_time">Execution time:</string>
    <string name="execution_time_placeholder">It takes some time:</string>
    <string name="pi_label">Pi:</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="activity_name_simplePi">Simple Pi</string>
    <string name="activity_name_multiPi">Multi-threaded Pi</string>
    <string name="activity_name_dnn">DNN (To Come)</string>

    <string name="description_application_logo">Application Logo</string>

    <string name="task_size_unit_operations">number of operations</string>
    <string name="threads_label">Number of Threads</string>

    <string name="result_execution_time_unit">&#160;sec</string>
    <string name="result_task_size_unit">&#160;op.</string>
    <string name="result_threads_unit">&#160;thread(s)</string>
</resources>
