<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/content_simple_pi"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.erkkiperkele.master_android.SimplePiActivity"
    tools:showIn="@layout/app_bar_simple_pi">

    <TextView
        android:id="@+id/sample_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"/>

    <Button
        android:id="@+id/pi_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="17dp"
        android:layout_marginEnd="22dp"
        android:background="@color/colorAccent"
        android:onClick="calculatePi"
        android:text="@string/ask_pi_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Inverse"/>

    <TextView
        android:id="@+id/pi_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/pi_button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="28dp"
        android:text="@string/ask_pi_placeholder"
        android:textSize="30sp"/>

    <SeekBar
        android:id="@+id/operations_seekbar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sample_text"
        android:layout_marginTop="103dp"
        android:max="4"
        android:progress="2"
        android:thumb="@color/colorPrimary"
        android:thumbTint="@color/colorAccent"/>

    <TextView
        android:id="@+id/operations_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/operations_seekbar"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="31dp"
        android:text="@string/operations_label"/>

    <TextView
        android:id="@+id/operations_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/operations_label_text"
        android:layout_alignBottom="@+id/operations_label_text"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/operations_label_text"
        android:text="@string/in_progress"
        android:textAlignment="viewStart"/>
</RelativeLayout>